production/aware/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware
  namespace: monitoring
  labels:
    app: aware
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - aware.sdpaks.equinor.com
      secretName: aware-tls
  rules:
    - host: aware.sdpaks.equinor.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: aware-api
              servicePort: 80
          - path: /
            backend:
              serviceName: aware-web
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware-auth
  namespace: monitoring
  labels:
    app: aware
spec:
  tls:
    - hosts:
        - aware.sdpaks.equinor.com
      secretName: aware-tls
  rules:
    - host: aware.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
